tests/golden/type_errors/generic_struct_method_collision.cd
struct Box<T> { value: T }

impl Box<T> {
  fun identity<T>(value: T): T {
    return value;
  }
}
