tests/golden/type_errors/generic_struct_method_collision.err
Type error at 4:16: method type parameter `T` conflicts with receiver type parameter `T`
    fun identity<T>(value: T): T {
                 ^
